Added Oauth and updated swagger.js
